--- a/sync/.env.example
+++ b/sync/.env.example
@@ -10,7 +10,6 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
-
 # PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
@@ -20,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=collapi
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -38,8 +37,6 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
-
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
@@ -63,3 +60,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+SCHEMA_API_CREDIT = "credits"
+SCHEMA_API_CLIENT = "clients"
+SCHEMA_API_CONTACT = "collection_contacts"
+SCHEMA_API_DIRECTION = "collection_directions"
+FACES_PAYS_DEV = ""
