feature: <env> se actualiza el modelo de archivo de entorno

--- a/sync/.env.example
+++ b/sync/.env.example
@@ -60,8 +60,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-SCHEMA_API_CREDIT = "credits"
-SCHEMA_API_CLIENT = "clients"
-SCHEMA_API_CONTACT = "collection_contacts"
-SCHEMA_API_DIRECTION = "collection_directions"
-FACES_PAYS_DEV = ""
+SCHEMA_API_CREDIT = ""
+SCHEMA_API_CLIENT = ""
+SCHEMA_API_CONTACT = ""
+SCHEMA_API_DIRECTION = ""
+FACES_LIST_CREDITS = ""
+FACES_LIST_PAYS = ""
+FACES_LIST_CONTACTS = ""
