feature: <syncs-pays> se agrega método para sincronizar pagos

--- a/sync/.env.example
+++ b/sync/.env.example
@@ -67,3 +67,5 @@ SCHEMA_API_DIRECTION = ""
 FACES_LIST_CREDITS = ""
 FACES_LIST_PAYS = ""
 FACES_LIST_CONTACTS = ""
+CAMPAIN_ID = 1
+BUSINESS_ID = 1
