feature: <syncs> se agrega control de estado de sincronización para trazabilidad

--- a/sync/.env.example
+++ b/sync/.env.example
@@ -64,6 +64,7 @@ SCHEMA_API_CREDIT = ""
 SCHEMA_API_CLIENT = ""
 SCHEMA_API_CONTACT = ""
 SCHEMA_API_DIRECTION = ""
+SCHEMA_API_STATUS_SYNC = ""
 FACES_LIST_CREDITS = ""
 FACES_LIST_PAYS = ""
 FACES_LIST_CONTACTS = ""
